--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "underscore": "^1.6.0",
     "json-stable-stringify": "^1.0.0",
     "counter-cache": "^0.1.0",
-    "cookie-parser": "^1.3.3"
+    "cookie-parser": "^1.3.3",
+    "csrf": "^2.0.1",
+    "connect-redis": "^2.0.1",
+    "express-session": "^1.8.2"
   }
 }
